# portfolio

./: .gitignore  STYLE.md  astro.config.mjs  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
.playwright-cli/: page-2026-03-21T11-28-39-488Z.yml  page-2026-03-21T11-29-33-041Z.yml  page-2026-03-21T11-46-42-034Z.yml  page-2026-03-21T11-46-44-766Z.yml  page-2026-03-21T11-54-20-690Z.yml  page-2026-03-21T11-54-32-037Z.yml  page-2026-03-21T11-54-35-201Z.yml  page-2026-03-21T11-54-46-753Z.yml  page-2026-03-21T11-54-50-567Z.yml  page-2026-03-21T12-01-21-602Z.yml  page-2026-03-21T12-03-47-038Z.yml  page-2026-03-21T12-15-01-880Z.yml
experiments/: 00000030_00754_d_0000036.txt
experiments/object_detection/: bbox_optimization_comparison.py  debug_fcos.py  loss_landscapes.py  monte_carlo_correlation_l1_ciou.py
public/: robots.txt
src/components/: ContributionCarousel.astro  Figure.astro  Header.astro  PageHeader.astro  PaperCard.astro  ProjectCard.astro  SectionHeader.astro  TableOfContents.astro
src/content/: config.ts
src/content/blog/: managing_multiple_torch_cuda_builds_with_uv.mdx  why_coordinates.mdx  why_iou_beats_l1.mdx
src/layouts/: BaseLayout.astro
src/pages/: index.astro  papers.astro  projects.astro  rss.xml.js
src/pages/blog/: [...slug].astro  index.astro
src/styles/: global.css
